--- a/public/css/contests/home.css
+++ b/public/css/contests/home.css
@@ -5,14 +5,15 @@
 } */
 
 body {
-    background-color: rgb(161, 161, 161);
+    /* background-color: rgb(161, 161, 161); */
+    background-color: white;
     font-family: Arial, Helvetica, sans-serif;
     /* display: grid; */
     place-items: center;
     /* min-height: 100vh;
     width: 100vw; */
 }
-
+/*
 body:before {
     content: ' ';
     display: block;
@@ -25,7 +26,7 @@ body:before {
     background-size: cover;
     background-repeat: no-repeat;
     filter: opacity(80%);
-}
+} */
 
 div.header h1 {
     text-align: center;
@@ -37,8 +38,8 @@ div.header h1 {
     margin-bottom: 40px;
     position: relative;
     /* grid-template-columns: 600px; */
-    border-radius: 5px;
-    box-shadow: 0 15px 20px rgb(125 125 125);
+    border-radius: 13px;
+    box-shadow: 0 1px 15px rgb(219 219 219);
     background-image: url('https://img.freepik.com/free-vector/abstract-blue-geometric-shapes-background_1035-17545.jpg?size=626&ext=jpg');
     background-repeat: no-repeat;
     background-size: cover;
