--- a/public/css/main.css
+++ b/public/css/main.css
@@ -105,8 +105,9 @@ table {
   width: 100%;
   margin: 0 auto;
 
-  background: rgb(209, 209, 209);
+  /* background: rgb(209, 209, 209); */
 
+  background: whitesmoke;
 }
 
 .container-table100 {
@@ -114,7 +115,7 @@ table {
 
   min-height: 90vh;
 
-  background: #d1d1d1;
+  /* background: #d1d1d1; */
 
   display: -webkit-box;
   display: -webkit-flex;
@@ -138,6 +139,9 @@ table {
 table {
   width: 100%;
   background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 1px 15px rgb(179, 179, 179);
+  overflow: hidden;
 }
 
 th, td {
